# progression-car-price

./: .gitignore  README.md  pyproject.toml
notebooks/: 20230911-feature_engineering_aki.ipynb  20240909-eda-aki.ipynb  20240909-eda-gota.ipynb  20240909-eda.ipynb  20240910-class.ipynb  20240910-imp-model-aki.ipynb  20240910-improve-model-gota.ipynb  20240910-mlflow-gota.ipynb
src/dataframe/: base.py  test.py  train.py
src/preprocess/: base.py  train.py
