[tool.poetry]
name = "progression-car-price"
version = "0.1.0"
description = ""
authors = ["Gota Shirato / 白戸豪大 <gshirato@uni-bonn.de>"]
readme = "README.md"
packages = [{include = "progression_car_price"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
