[tool.poetry]
name = "progression-car-price"
version = "0.1.0"
description = ""
authors = ["Gota Shirato / 白戸豪大 <gshirato@uni-bonn.de>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
matplotlip = "^0.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
category-encoders = "^2.6.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
